# apisix-rust-plugin

./: .gitignore  docker-compose.yml
apisix/: apisix.yml  config.yml
sample/: Cargo.toml  Dockerfile
sample/src/: lib.rs
